@@ -117,6 +117,7 @@ tasks.withType(Test) {
 test {
   failFast = true
   useJUnitPlatform()
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
 task functional(type: Test) {
@@ -124,6 +125,7 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
 task integration(type: Test) {
